[gd_scene load_steps=3 format=3 uid="uid://cp832jmwru06w"]

[ext_resource type="Script" uid="uid://c47yey6m0t3ir" path="res://sources/language_tool/prof_tool_menu.gd" id="1_ibtf2"]

[sub_resource type="FontVariation" id="FontVariation_vmcjv"]

[node name="ProfToolMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ibtf2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
current_tab = 0
use_hidden_tabs_for_min_size = true

[node name="Language" type="VBoxContainer" parent="CenterContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 50
metadata/_tab_index = 0

[node name="GPListButton" type="Button" parent="CenterContainer/TabContainer/Language"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "GP List"

[node name="WordListButton" type="Button" parent="CenterContainer/TabContainer/Language"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Word List"

[node name="SyllableListButton" type="Button" parent="CenterContainer/TabContainer/Language"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Syllable List"

[node name="SentenceListButton" type="Button" parent="CenterContainer/TabContainer/Language"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Sentence List"

[node name="LessonListButton" type="Button" parent="CenterContainer/TabContainer/Language"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Lesson List"

[node name="LookAndLearnData" type="VBoxContainer" parent="CenterContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 50
metadata/_tab_index = 1

[node name="TracingBuilderButton" type="Button" parent="CenterContainer/TabContainer/LookAndLearnData"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Tracing Builder
"

[node name="DataLoaderButton" type="Button" parent="CenterContainer/TabContainer/LookAndLearnData"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "GP Image/Sound Loader"

[node name="DataLoaderButton2" type="Button" parent="CenterContainer/TabContainer/LookAndLearnData"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "GP Video Loader
"

[node name="GameData" type="VBoxContainer" parent="CenterContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 50
metadata/_tab_index = 2

[node name="GameSoundsButton" type="Button" parent="CenterContainer/TabContainer/GameData"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "GP/syllable/word sounds
"

[node name="PseudowordsButton" type="Button" parent="CenterContainer/TabContainer/GameData"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Pseudowords
"

[node name="ExercisesButton" type="Button" parent="CenterContainer/TabContainer/GameData"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Lesson Exercises"

[node name="SpeechesButton" type="Button" parent="CenterContainer/TabContainer/GameData"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Kalulu Speeches
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -550.0
offset_top = 7.0
offset_right = 555.0
offset_bottom = 165.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 120
text = "Kalulu Language Tool"

[node name="ExportButton" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 1502.0
offset_right = 692.0
offset_bottom = 1647.0
theme_override_font_sizes/font_size = 100
text = "Export
"

[node name="CreateBookButton" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 1304.0
offset_right = 692.0
offset_bottom = 1449.0
theme_override_font_sizes/font_size = 100
text = "Create Book
"

[node name="CheckIntegrityButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1035.33
offset_top = 1502.0
offset_right = 1767.33
offset_bottom = 1647.0
theme_override_font_sizes/font_size = 100
text = "Check Integrity
"

[node name="CheckBoxLog" type="CheckBox" parent="CheckIntegrityButton"]
layout_mode = 0
offset_left = -93.0
offset_top = 39.0
offset_right = -23.0
offset_bottom = 109.0

[node name="Label" type="Label" parent="CheckIntegrityButton/CheckBoxLog"]
layout_mode = 0
offset_left = -35.33
offset_top = 66.0
offset_right = 100.67
offset_bottom = 121.0
text = "Log all"
horizontal_alignment = 1

[node name="OpenFolderButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1922.0
offset_top = 1545.0
offset_right = 2475.0
offset_bottom = 1636.0
theme_override_font_sizes/font_size = 42
text = "Open language resource Folder"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 117.0
offset_right = 667.0
offset_bottom = 547.0
theme_override_constants/separation = 50

[node name="ImportLanguageButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Import language data"

[node name="LanguageSelectButton" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 60
alignment = 1
item_count = 1
popup/item_0/text = "New"
popup/item_0/id = 0

[node name="AddWordListButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Change word list"

[node name="NewLanguageContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -605.0
offset_top = -705.0
offset_right = 650.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NewLanguageContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="NewLanguageContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Label" type="Label" parent="NewLanguageContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Enter new language name"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="NewLanguageContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="NewLanguageContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="ButtonContainer" type="MarginContainer" parent="NewLanguageContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ValidateLanguage" type="Button" parent="NewLanguageContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "Validate"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(1500, 1000)
always_on_top = true
popup_window = true
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="FileDialogExport" type="FileDialog" parent="."]
initial_position = 2
size = Vector2i(1500, 1000)
popup_window = true
access = 2

[node name="ErrorLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -79.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = SubResource("FontVariation_vmcjv")
theme_override_font_sizes/font_size = 60

[connection signal="pressed" from="CenterContainer/TabContainer/Language/GPListButton" to="." method="_on_gp_list_button_pressed"]
[connection signal="pressed" from="CenterContainer/TabContainer/Language/WordListButton" to="." method="_on_word_list_button_pressed"]
[connection signal="pressed" from="CenterContainer/TabContainer/Language/SyllableListButton" to="." method="_on_syllable_list_button_pressed"]
[connection signal="pressed" from="CenterContainer/TabContainer/Language/SentenceListButton" to="." method="_on_sentence_list_button_pressed"]
[connection signal="pressed" from="CenterContainer/TabContainer/Language/LessonListButton" to="." method="_on_lesson_list_button_pressed"]
[connection signal="pressed" from="CenterContainer/TabContainer/LookAndLearnData/TracingBuilderButton" to="." method="_on_tracing_builder_button_pressed"]
[connection signal="pressed" from="CenterContainer/TabContainer/LookAndLearnData/DataLoaderButton" to="." method="_on_data_loader_button_pressed"]
[connection signal="pressed" from="CenterContainer/TabContainer/LookAndLearnData/DataLoaderButton2" to="." method="_on_data_loader_button_2_pressed"]
[connection signal="pressed" from="CenterContainer/TabContainer/GameData/GameSoundsButton" to="." method="_on_game_sounds_button_pressed"]
[connection signal="pressed" from="CenterContainer/TabContainer/GameData/PseudowordsButton" to="." method="_on_pseudowords_button_pressed"]
[connection signal="pressed" from="CenterContainer/TabContainer/GameData/ExercisesButton" to="." method="_on_exercises_button_pressed"]
[connection signal="pressed" from="CenterContainer/TabContainer/GameData/SpeechesButton" to="." method="_on_speeches_button_pressed"]
[connection signal="pressed" from="ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="pressed" from="CreateBookButton" to="." method="create_book"]
[connection signal="pressed" from="CheckIntegrityButton" to="." method="_check_db_integrity"]
[connection signal="pressed" from="OpenFolderButton" to="." method="_on_open_folder_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ImportLanguageButton" to="." method="_on_import_language_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/LanguageSelectButton" to="." method="_on_language_select_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/AddWordListButton" to="." method="_on_add_word_list_button_pressed"]
[connection signal="pressed" from="NewLanguageContainer/VBoxContainer/ButtonContainer/ValidateLanguage" to="." method="_on_validate_language_pressed"]
